compiler/testData/asJava/lightClasses/compilationErrors/TraitClassObjectField.java
public abstract interface TraitClassObjectField /* TraitClassObjectField*/ {
  @org.jetbrains.annotations.NotNull()
  public static final TraitClassObjectField.Companion Companion;

  @org.jetbrains.annotations.Nullable()
  public static final java.lang.String x = "" /* initializer type: java.lang.String */ /* constant value  */;


public static final class Companion /* TraitClassObjectField.Companion*/ {
  @org.jetbrains.annotations.Nullable()
  public static final java.lang.String x = "" /* initializer type: java.lang.String */ /* constant value  */;

  private static final java.lang.String y;

  private  Companion();//  .ctor()

}}